recallable/tests/ui/derive_fail_lifetime_parameterized_struct.rs
use recallable::Recallable;

#[derive(Recallable)]
struct LifetimeParameterized<'a> {
    marker: core::marker::PhantomData<&'a ()>,
    value: u8,
}

fn main() {}
